--- a/massa-bootstrap/Cargo.toml
+++ b/massa-bootstrap/Cargo.toml
@@ -52,7 +52,7 @@ massa_async_pool = {workspace = true, "features" = ["test-exports"]}
 massa_ledger_exports = {workspace = true}
 massa_ledger_worker = {workspace = true, "features" = ["test-exports"]}
 massa_executed_ops = {workspace = true}
-massa_pos_worker = {workspace = true, "features" = ["test-exports"]}
 massa_pos_exports = {workspace = true, "features" = ["test-exports"]}
 massa_consensus_exports = {workspace = true, "features" = ["test-exports"]}
-massa_db_worker = {workspace = true}
+massa_db_worker = {workspace = true, "features" = ["test-exports"]}
+massa_test_framework = {workspace = true}
