--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main, staging, trying]
   pull_request:
-    branches: [main, 'testnet_*', 'buildnet_wip']
+    branches: [main, 'testnet_*']
     types:
     - opened
     - reopened
