Pre mainnet WIP (#4563)
* Update version & CI

* Test/array indexing checkup 1 (#4560)

* Update ci.yml

* Feature/feature/versioning ser der harden 2 (#4554)

* Add some unit tests for versioning deserialization to the limits

* Clippy pass

* Better error message

* Minor fixes

* Excluded -> Included

---------

Co-authored-by: sydhds <sydhds@gmail.com>

* Add versioninig key & value checks (#4552)

* Add versioninig key & value checks

* Improve error message when no prefix

---------

Co-authored-by: sydhds <sydhds@gmail.com>

* Update CI, Version and genesis timestamp

* Add array indexing listing tool

* Remove array indexing in denunciation code

* Remove more array indexing

* Add more exclude patterns

* Use nom take

---------

Co-authored-by: sydhds <sydhds@gmail.com>

* Fails in send_operations if get_gas_usage() > max_gas_per_block

Returning a distinct error message for ExecuteSC and CallSC operations.

Signed-off-by: Jean-François <jfm@laposte.net>

* coins spending tests (#4532)

* Buildnet WIP

* Mock Final State/Improve tests execution (#4512)

* Use a controller for final state to be able to mock it

* Fix all formatting issues.

* Use more mocks in execution tests

* Fix test nested call usage

* improve some tests execution

* Fix tests async message and compact the test of executed

* Fix more execution tests

* Fix more tests.

* Update more tests

* Finish fixing all executions tests.

* Improve naming

* add more comment

* Fix comment

* update test to check spend coins with readonly

* add coins

* check coins on rollbuy

* clippy

* update roll_buy

* delete helloworld wasm

* update test_readonly_execution

* fix tests merge

* fix test test_readonly_execution

* Update ci.yml

* Feature/feature/versioning ser der harden 2 (#4554)

* Add some unit tests for versioning deserialization to the limits

* Clippy pass

* Better erro

--- a/massa-async-pool/Cargo.toml
+++ b/massa-async-pool/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "massa_async_pool"
-version = "0.27.1"
+version = "0.27.2"
 authors = ["Massa Labs <info@massa.net>"]
 edition = "2021"
 
@@ -9,20 +9,22 @@ test-exports = []
 sandbox = []
 
 [dependencies]
-nom = {workspace = true}
-num = {workspace = true}
-serde = {workspace = true, "features" = ["derive"]}
-rand = {workspace = true}
-massa_ledger_exports = {workspace = true}
-massa_models = {workspace = true}
-massa_serialization = {workspace = true}
-massa_signature = {workspace = true}
-massa_db_exports = {workspace = true}
-massa-proto-rs = {workspace = true, "features" = ["tonic"]}
+nom = { workspace = true }
+num = { workspace = true }
+serde = { workspace = true, "features" = ["derive"] }
+rand = { workspace = true }
+massa_ledger_exports = { workspace = true }
+massa_models = { workspace = true }
+massa_serialization = { workspace = true }
+massa_signature = { workspace = true }
+massa_db_exports = { workspace = true }
+massa-proto-rs = { workspace = true, "features" = ["tonic"] }
+serde_json = { workspace = true }                             # BOM UPGRADE     Revert to "1.0" if problem
+serde_with = { workspace = true }
 
 [dev-dependencies]
-tempfile = {workspace = true}   # BOM UPGRADE     Revert to "3.3" if problem
-parking_lot = {workspace = true}
+tempfile = { workspace = true }            # BOM UPGRADE     Revert to "3.3" if problem
+parking_lot = { workspace = true }
 assert_matches = { workspace = true }
-massa_ledger_worker = {workspace = true}
-massa_db_worker = {workspace = true}
+massa_ledger_worker = { workspace = true }
+massa_db_worker = { workspace = true }
