--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -92,20 +92,7 @@ jobs:
             tar czvf massa_${GITHUB_REF/refs\/tags\//}_${{ matrix.name }} massa
           fi
           cd -
-        working-directory: ${{ github.workspace }}
-      - name: Generate checksum
-        uses: jmgilman/actions-generate-checksum@v1
-        with:
-          method: sha256
-          patterns: |
-            ${{ github.workspace }}/massa/*.zip
-            ${{ github.workspace }}/massa/*.tar.gz
-          output: checksums_${{ matrix.name }}.txt
-
       - name: Publish
         uses: softprops/action-gh-release@v1
         with:
-          files: |
-            massa_*.zip
-            massa_*.gz
-            checksums_*.txt
+          files: 'massa_*'
