--- a/massa-models/Cargo.toml
+++ b/massa-models/Cargo.toml
@@ -35,4 +35,5 @@ transition = { workspace = true }
 variant_count = { workspace = true }
 
 [dev-dependencies]
+serde_json = { workspace = true }
 serial_test = { workspace = true } # BOM UPGRADE     Revert to "1.0" if problem
