--- a/massa-models/Cargo.toml
+++ b/massa-models/Cargo.toml
@@ -36,4 +36,5 @@ variant_count = { workspace = true }
 
 [dev-dependencies]
 serde_json = { workspace = true }
+serde_with = { workspace = true }
 serial_test = { workspace = true } # BOM UPGRADE     Revert to "1.0" if problem
