--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,8 +105,10 @@ massa_versioning = { path = "./massa-versioning" }
 massa_wallet = { path = "./massa-wallet" }
 
 # Massa projects dependencies
-massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", "rev" = "effc0418977cd64402172b7eb749a2fc7537771a" }
-massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "rev" = "0964888658c24060b4b553cb52ed8ba5365eca01" }
+# massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", "rev" = "effc0418977cd64402172b7eb749a2fc7537771a" }
+massa-proto-rs = { path = "../massa-proto-rs_2" }
+# massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "rev" = "26eaa54fc604e88cf73a8fbe2a39531abb1e5945" }
+massa-sc-runtime = { path = "../massa-sc-runtime" }
 peernet = { git = "https://github.com/massalabs/PeerNet", "branch" = "main" }
 
 # Common dependencies
