--- a/massa-client/Cargo.toml
+++ b/massa-client/Cargo.toml
@@ -3,6 +3,11 @@ name = "massa-client"
 version = "0.27.4"
 edition = "2021"
 
+[features]
+sandbox = [
+    "massa_models/sandbox",
+]
+
 [dependencies]
 anyhow = {workspace = true}
 is-terminal = { workspace = true }
