--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -43,7 +43,7 @@
         # whether to enable gRPC
         enabled = true
         # whether to add HTTP 1 layer
-        accept_http1 = false
+        accept_http1 = true
         # whether to enable CORS. works only if `accept_http1` is true
         enable_cors = false
         # whether to enable gRPC health service
@@ -116,7 +116,7 @@
         # whether to enable gRPC
         enabled = true
         # whether to add HTTP 1 layer
-        accept_http1 = false
+        accept_http1 = true
         # whether to enable CORS. works only if `accept_http1` is true
         enable_cors = false
         # whether to enable gRPC health service
