--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -260,7 +260,7 @@
     initial_peers_file = "base_config/initial_peers.json"
     # Limit of read/write number of bytes per second with a peer (Should be a 10 multiple)
     read_write_limit_bytes_per_second = 2_000_000_000
-    # timeout after which without answer a hanshake is ended
+    # timeout after which without answer a handshake is ended
     message_timeout = 5000
     # timeout after which a peer tester will consider the peer unreachable
     tester_timeout = 10000
