--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,7 +107,7 @@ massa_wallet = { path = "./massa-wallet" }
 # Massa projects dependencies
 massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", "rev" = "84678fb77cf6d06d85d55e2c20502908ff292e61" }
 # massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "rev" = "26eaa54fc604e88cf73a8fbe2a39531abb1e5945" }
-massa-sc-runtime = { path = "../massa-sc-runtime" }
+massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", branch = "feature/chainid" }
 peernet = { git = "https://github.com/massalabs/PeerNet", "branch" = "main" }
 
 # Common dependencies
