Update Bors related comments in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,7 +110,7 @@ jobs:
       - uses: actions-rust-lang/audit@v1
         name: Audit Rust Dependencies
 
-  # Full cross-platform tests required by bors to merge on main branch
+  # Full cross-platform tests required to merge on main branch
   full:
     name: full
     needs: sanity
@@ -221,7 +221,7 @@ jobs:
           files: lcov.info
           fail_ci_if_error: false
 
-  build: # quick hack because bors wrongly detect matrix jobs status
+  build: # quick hack because bors wrongly detect matrix jobs status. Note: May not be needed with HitHub Merge Queues.
     needs: full
     runs-on: ubuntu-latest
     steps:
