--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,8 +106,7 @@ massa_wallet = { path = "./massa-wallet" }
 
 # Massa projects dependencies
 massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", "rev" = "84678fb77cf6d06d85d55e2c20502908ff292e61" }
-# massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "rev" = "26eaa54fc604e88cf73a8fbe2a39531abb1e5945" }
-massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", branch = "feature/chainid" }
+massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "rev" = "d1dce679951ce1d1dad0471b2ac6b8ef12b44e9d" }
 peernet = { git = "https://github.com/massalabs/PeerNet", "branch" = "main" }
 
 # Common dependencies
