--- a/massa-client/base_config/config.toml
+++ b/massa-client/base_config/config.toml
@@ -10,7 +10,7 @@ public_port = 33035
 grpc_public_port = 33037
 grpc_private_port = 33038
 # Chain id for SecureNet, please update to match the target node chain id
-chain_id = 77
+chain_id = 77658383
 
 [client]
     # maximum size in bytes of a request. Defaults to 50MB
