Fix thread name max length
Signed-off-by: Jean-François <jfm@laposte.net>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -178,6 +178,7 @@ serial_test = "2.0"
 sha2 = "=0.10"
 sha3 = "=0.10"
 socket2 = "0.5"
+static_assertions = "1.1"
 stream_limiter = "3.2"
 structopt = "0.3"
 strum = "0.25"
