--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -38,7 +38,7 @@
     # whether to broadcast for blocks, endorsements and operations
     enable_broadcast = false
     # deferred credits delta (in milliseconds)
-    deferred_credits_delta = 5184000000 # ~ 2 months
+    deferred_credits_delta = 7776000000 # ~ 3 months (90×24×60×60×1000) in milliseconds
 
 [grpc]
     [grpc.public]
