--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -40,6 +40,8 @@
     enable_ws = false
     # whether to broadcast for blocks, endorsements and operations
     enable_broadcast = false
+    # deferred credits delta (in milliseconds)
+    deferred_credits_delta = 7776000000 # ~ 3 months (90×24×60×60×1000) in milliseconds
     # max datastore keys query
     max_datastore_keys_query = 500
     # max number of addresses that can be included in a single request
