--- a/Cargo.toml
+++ b/Cargo.toml
@@ -200,3 +200,4 @@ tracing-subscriber = "0.3"
 unsigned-varint = "0.8"
 variant_count = "1.1"
 walkdir = "2.3"
+zeroize = { version = "1.7", features = ["derive"] }
