--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,7 +107,7 @@ massa_wallet = { path = "./massa-wallet" }
 # Massa projects dependencies
 massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", "rev" = "84678fb77cf6d06d85d55e2c20502908ff292e61" }
 massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "rev" = "bbab9f329eee08d1f54c595214634a03824e9343" }
-peernet = { git = "https://github.com/massalabs/PeerNet", "branch" = "main" }
+peernet = { git = "https://github.com/massalabs/PeerNet", "rev" = "04b05ddd320fbe76cc858115af7b5fc28bdb8310" }
 
 # Common dependencies
 transition = { git = "https://github.com/massalabs/transition.git", "rev" = "93fa3bf82f9f5ff421c78536879b7fd1b948ca75" }
