Add 2 RPC endpoint with fake data

--- a/massa-grpc/Cargo.toml
+++ b/massa-grpc/Cargo.toml
@@ -8,6 +8,7 @@ homepage = "https://massa.net"
 documentation = "https://docs.massa.net/"
 
 [features]
+execution-trace = []
 test-exports = []
 
 [dependencies]
