--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -293,7 +293,7 @@ jobs:
           branch: gh-pages
           folder: target/doc
 
-  unit_tests:
+  unit_tests_old:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -303,3 +303,28 @@ jobs:
         shell: bash
         run: |
           cargo install cargo-script && cargo script tools/setup_test.rs && git diff --no-ext-diff --quiet
+
+  unit_tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: "recursive"
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: 1.74.1
+          components: rustfmt
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: install
+          args: cargo-script      
+      - uses: actions-rs/cargo@v1
+        with:
+          command: script
+          args: tools/setup_test.rs
+      - name: setup_tests
+        shell: bash
+        run: |
+          git diff --no-ext-diff --quiet
