Feature gate test framework  (#4642)
* Only enable test framework on feature

* Bump shlex to 1.3.0

* Update glob pattern in setup test?

* Update ci.yml

* Update ci.yml

* Update send_message_condition.wasm

* Update CI to use rust-script instead of unmaintained cargo script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -302,4 +302,4 @@ jobs:
       - name: setup_tests
         shell: bash
         run: |
-          cargo install cargo-script && cargo script tools/setup_test.rs && git diff --no-ext-diff --quiet
+          cargo install rust-script && rust-script tools/setup_test.rs && git diff --no-ext-diff --quiet
