Link job on getting info with API.

--- a/massa-execution-worker/Cargo.toml
+++ b/massa-execution-worker/Cargo.toml
@@ -39,7 +39,7 @@ benchmarking = [
     "tempfile"
 ]
 metrics = []
-execution_trace = []
+execution-trace = []
 
 [dependencies]
 anyhow = { workspace = true }
