--- a/massa-execution-exports/Cargo.toml
+++ b/massa-execution-exports/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [features]
 gas_calibration = ["tempfile"]
 test-exports = ["massa_models/test-exports", "tempfile", "mockall"]
+execution-trace = []
 
 [dependencies]
 displaydoc = {workspace = true}
