Add draft gather infos

--- a/massa-execution-worker/Cargo.toml
+++ b/massa-execution-worker/Cargo.toml
@@ -39,7 +39,7 @@ benchmarking = [
     "tempfile"
 ]
 metrics = []
-execution-trace = []
+execution-trace = ["schnellru", "massa-sc-runtime/execution-trace"]
 
 [dependencies]
 anyhow = { workspace = true }
@@ -56,7 +56,6 @@ num = { workspace = true, features = [
 sha2 = { workspace = true }
 sha3 = { workspace = true }
 libsecp256k1 = { workspace = true }
-function_name = "0.3" # to be removed (after traces moves to sc runtime)
 criterion = { workspace = true, "optional" = true }
 massa_pos_worker = { workspace = true, "optional" = true }
 massa_async_pool = { workspace = true }
@@ -80,6 +79,7 @@ massa_db_worker = { workspace = true, optional = true }
 tempfile = { workspace = true, optional = true }
 massa_wallet = { workspace = true }
 massa-proto-rs = { workspace = true }
+schnellru = { workspace = true, optional = true }
 
 [dev-dependencies]
 massa_storage = { workspace = true }
