Cleanup execution trace

--- a/massa-execution-worker/Cargo.toml
+++ b/massa-execution-worker/Cargo.toml
@@ -39,7 +39,10 @@ benchmarking = [
     "tempfile"
 ]
 metrics = []
-execution-trace = ["schnellru", "massa-sc-runtime/execution-trace"]
+execution-trace = [
+    "schnellru",
+    "massa_execution_exports/execution-trace",
+]
 
 [dependencies]
 anyhow = { workspace = true }
