Execution trace parameters & return value are now ser in json format

--- a/massa-grpc/Cargo.toml
+++ b/massa-grpc/Cargo.toml
@@ -29,6 +29,7 @@ tracing = { workspace = true }
 parking_lot = { workspace = true, "features" = ["deadlock_detection"] }
 h2 = { workspace = true }
 itertools = { workspace = true }
+serde_json = { workspace = true }
 # test
 
 massa_consensus_exports = { workspace = true }
