--- a/massa-api/Cargo.toml
+++ b/massa-api/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [features]
 test-exports = ["dep:massa_channel", "dep:massa_grpc", "massa_grpc/test-exports"]
+execution-trace = ["massa_execution_exports/execution-trace"]
 
 [dependencies]
 massa_api_exports = { workspace = true }
