Add gathering of transfers in the node + prep work for ABIs (#4646)
* Add 2 RPC endpoint with fake data

* Add stream grpc

* Add initial impl of execution traces for abi calls

* Link job on getting info with API.

* Add draft gather infos

* Cleanup execution trace

* Cargo clippy pass

* Update grpc public & stream api for execution traces

* Execution trace parameters & return value are now ser in json format

* Cargo clippy pass

* Fix execution trace unit tests

* Add serde_json as an optional dep

* Update proto files

* Fix finality filter and add placeholder for slot transfers endpoints

* Format and add a start of logic for compiling results

* Fix compil errors for basic feature

* Fix clippy issues

* Add JSON-RPC structure endpoint

* Flatten code for new abi get_slot_transfers

* Fix tu

* Fix logic in the stream and add it in the gRPC endpoint and Json-RPC

* Format and update massa-runtime

* Revert config change on the client

* Revert changes on initial rolls file

* Fix final broadcast by default on API.

* Fix initial rolls

* Add transfer when calling an SC

---------

Co-authored-by: sydhds <sd@massa.net>

--- a/massa-grpc/Cargo.toml
+++ b/massa-grpc/Cargo.toml
@@ -8,6 +8,7 @@ homepage = "https://massa.net"
 documentation = "https://docs.massa.net/"
 
 [features]
+execution-trace = ["serde_json"]
 test-exports = []
 
 [dependencies]
@@ -28,6 +29,7 @@ tracing = { workspace = true }
 parking_lot = { workspace = true, "features" = ["deadlock_detection"] }
 h2 = { workspace = true }
 itertools = { workspace = true }
+serde_json = { workspace = true, optional = true }
 # test
 
 massa_consensus_exports = { workspace = true }
