--- a/massa-execution-worker/Cargo.toml
+++ b/massa-execution-worker/Cargo.toml
@@ -39,6 +39,10 @@ benchmarking = [
     "tempfile"
 ]
 metrics = []
+execution-trace = [
+    "schnellru",
+    "massa_execution_exports/execution-trace",
+]
 
 [dependencies]
 anyhow = { workspace = true }
@@ -78,6 +82,7 @@ massa_db_worker = { workspace = true, optional = true }
 tempfile = { workspace = true, optional = true }
 massa_wallet = { workspace = true }
 massa-proto-rs = { workspace = true }
+schnellru = { workspace = true, optional = true }
 
 [dev-dependencies]
 massa_storage = { workspace = true }
