--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -217,8 +217,8 @@
     broadcast_slot_execution_output_channel_capacity = 5000
     # slot execution traces channel capacity
     broadcast_slot_execution_traces_channel_capacity = 5000
-    # Max execution traces (group by block id) to keep in cache
-    execution_traces_limit = 5000
+    # Max slots execution traces to keep in cache
+    execution_traces_limit = 320
 
 [ledger]
     # path to the initial ledger
