--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -95,7 +95,49 @@ jobs:
             tar czvf massa_${GITHUB_REF/refs\/tags\//}_${{ matrix.name }} massa
           fi
           cd -
-      - name: Publish
+      - name: Upload ${{ matrix.os }}_${{ matrix.platform }} artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: massa_artifacts_${{ matrix.name }}
+          path: |
+            massa_*.zip
+            massa_*.tar.gz
+          if-no-files-found: error
+      - name: Publish ${{ matrix.os }}_${{ matrix.platform }} artifacts
         uses: softprops/action-gh-release@v1
         with:
-          files: 'massa_*'
+          files: |
+            massa_*.zip
+            massa_*.tar.gz
+
+  checksum:
+    needs: release
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+      - name: Move all artifacts to workspace
+        run: |
+          source_directory="artifacts"
+          release_directory="${{ github.workspace }}"
+          zip_pattern="massa_*.zip"
+          tar_pattern="massa_*.tar.gz"
+
+          mkdir -p "$release_directory"
+          find "$source_directory" -type f \( -name "$zip_pattern" -o -name "$tar_pattern" \) -exec mv -t "$release_directory" {} +
+      - name: Generate checksums file
+        uses: jmgilman/actions-generate-checksum@v1
+        with:
+          method: sha256
+          patterns: |
+            massa_*.zip
+            massa_*.tar.gz
+          output: checksums.txt
+      - name: Publish checksums file
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            checksums.txt
