--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,17 +98,17 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --no-deps --all-targets
 
-  security:
-    if: github.ref != 'refs/heads/staging'
-    needs: sanity
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: "recursive"
-      - uses: actions-rust-lang/audit@v1
-        name: Audit Rust Dependencies
+  # security:
+  #   if: github.ref != 'refs/heads/staging'
+  #   needs: sanity
+  #   runs-on: ubuntu-latest
+  #   continue-on-error: true
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #       with:
+  #         submodules: "recursive"
+  #     - uses: actions-rust-lang/audit@v1
+  #       name: Audit Rust Dependencies
 
   # Full cross-platform tests required to merge on main branch
   full:
