--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,8 +107,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: "recursive"
-      - uses: actions-rust-lang/audit@v1
-        name: Audit Rust Dependencies
+      # - uses: actions-rust-lang/audit@v1
+      #   name: Audit Rust Dependencies
 
   # Full cross-platform tests required to merge on main branch
   full:
