--- a/massa-grpc/Cargo.toml
+++ b/massa-grpc/Cargo.toml
@@ -9,6 +9,7 @@ documentation = "https://docs.massa.net/"
 
 [features]
 execution-trace = ["serde_json"]
+dump-block = []
 test-exports = []
 
 [dependencies]
