--- a/massa-api/Cargo.toml
+++ b/massa-api/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [features]
 test-exports = ["dep:massa_channel", "dep:massa_grpc", "massa_grpc/test-exports"]
 execution-trace = ["massa_execution_exports/execution-trace"]
+dump-block = ["massa_execution_exports/dump-block"]
+
 
 [dependencies]
 massa_api_exports = { workspace = true }
