--- a/massa-node/Cargo.toml
+++ b/massa-node/Cargo.toml
@@ -23,6 +23,7 @@ sandbox = [
     "massa_metrics/sandbox",
 ]
 execution-trace = ["massa_grpc/execution-trace", "massa_api/execution-trace", "massa_execution_worker/execution-trace", "massa_execution_exports/execution-trace"]
+dump-block = ["massa_execution_worker/dump-block", "massa_execution_exports/dump-block"]
 
 [dependencies]
 crossbeam-channel = { workspace = true } # BOM UPGRADE     Revert to "0.5.6" if problem
