--- a/massa-execution-exports/Cargo.toml
+++ b/massa-execution-exports/Cargo.toml
@@ -9,6 +9,7 @@ gas_calibration = ["tempfile"]
 test-exports = ["massa_models/test-exports", "tempfile", "mockall"]
 execution-trace = ["massa-sc-runtime/execution-trace"]
 dump-block = []
+execution-info = ["execution-trace"]
 
 [dependencies]
 displaydoc = {workspace = true}
