--- a/massa-node/Cargo.toml
+++ b/massa-node/Cargo.toml
@@ -24,6 +24,9 @@ sandbox = [
 ]
 execution-trace = ["massa_grpc/execution-trace", "massa_api/execution-trace", "massa_execution_worker/execution-trace", "massa_execution_exports/execution-trace"]
 dump-block = ["massa_execution_worker/dump-block", "massa_execution_exports/dump-block"]
+execution-info = [
+    "execution-trace"
+]
 
 [dependencies]
 crossbeam-channel = { workspace = true } # BOM UPGRADE     Revert to "0.5.6" if problem
