--- a/massa-execution-worker/Cargo.toml
+++ b/massa-execution-worker/Cargo.toml
@@ -45,6 +45,7 @@ execution-trace = [
 ]
 dump-block = [
     "prost",
+    "rocksdb",
     "massa_execution_exports/dump-block",
 ]
 
@@ -64,6 +65,10 @@ sha2 = { workspace = true }
 sha3 = { workspace = true }
 libsecp256k1 = { workspace = true }
 criterion = { workspace = true, "optional" = true }
+tempfile = { workspace = true, optional = true }
+schnellru = { workspace = true, optional = true }
+prost = { version = "=0.12", optional = true }
+rocksdb = { workspace = true, optional = true }
 massa_pos_worker = { workspace = true, "optional" = true }
 massa_async_pool = { workspace = true }
 massa_channel = { workspace = true }
@@ -83,11 +88,8 @@ massa_final_state = { workspace = true }
 massa_versioning = { workspace = true }
 massa_db_exports = { workspace = true }
 massa_db_worker = { workspace = true, optional = true }
-tempfile = { workspace = true, optional = true }
 massa_wallet = { workspace = true }
 massa-proto-rs = { workspace = true }
-schnellru = { workspace = true, optional = true }
-prost = { version = "=0.12", optional = true }
 
 [dev-dependencies]
 massa_storage = { workspace = true }
