--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ lto = true           # Enables Link Time Optimization, enabling more aggressive 
 # The saved snapshot can then be used to restart the network from the snapshot.
 [workspace.dependencies]
 # Internal packages
+massa_asc = { path = "./massa-asc" }
 massa_api = { path = "./massa-api" }
 massa_api_exports = { path = "./massa-api-exports" }
 massa_async_pool = { path = "./massa-async-pool" }
@@ -107,7 +108,7 @@ massa_wallet = { path = "./massa-wallet" }
 
 # Massa projects dependencies
 massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", "rev" = "426fd325a55dfcc4033920bed2de075a7e7ad4b7" }
-massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "rev" = "e95066a6d3a963ff0125616f404a84e5abb63d63" }
+massa-sc-runtime = { git = "https://github.com/AurelienFT/massa-sc-runtime", "rev" = "e19017b54d5ef8ed86e4da9098fdd4ecb4294459" }
 peernet = { git = "https://github.com/massalabs/PeerNet", "rev" = "04b05ddd320fbe76cc858115af7b5fc28bdb8310" }
 
 # Common dependencies
