Initial code for dump-block feature (#4684)
* Initial code for dump-block feature

* Cargo fmt pass

* Display current folder

* Display current folder 2

* Add denunciations to grpc block header

* Cargo fmt pass

* Cargo clippy pass

* Try to update setup-protoc github actions

* Try to update setup-protoc github actions 2

* Update serde

* Update massa-sc-runtime && massa-proto-rs commit id

--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -213,6 +213,7 @@
     snip_amount = 10
     # slot execution outputs channel capacity
     broadcast_slot_execution_output_channel_capacity = 5000
+    # Enable execution-traces (detailed execution info like SC abi calls) with: --features execution-trace
     # slot execution traces channel capacity
     broadcast_slot_execution_traces_channel_capacity = 5000
     # Max slots execution traces to keep in cache
@@ -423,3 +424,7 @@
 [versioning]
     # Warn user to update its node if we reach this percentage for announced network versions
     mip_stats_warn_announced_version = 30
+
+# Dump final blocks (in grpc binary format) by activating the feature: --features dump-block
+[block_dump]
+    block_dump_folder_path = "dump/blocks"
