--- a/massa-execution-worker/Cargo.toml
+++ b/massa-execution-worker/Cargo.toml
@@ -40,12 +40,14 @@ benchmarking = [
 ]
 metrics = []
 execution-trace = [
-    "schnellru",
     "massa_execution_exports/execution-trace",
 ]
 dump-block = [
     "prost",
-    "massa_execution_exports/dump-block",
+    "massa_execution_exports/dump-block"
+]
+execution-info = [
+    "execution-trace"
 ]
 
 [dependencies]
@@ -86,8 +88,9 @@ massa_db_worker = { workspace = true, optional = true }
 tempfile = { workspace = true, optional = true }
 massa_wallet = { workspace = true }
 massa-proto-rs = { workspace = true }
-schnellru = { workspace = true, optional = true }
+schnellru = { workspace = true }
 prost = { version = "=0.12", optional = true }
+cfg-if = "1.0.0"
 
 [dev-dependencies]
 massa_storage = { workspace = true }
