--- a/massa-execution-worker/Cargo.toml
+++ b/massa-execution-worker/Cargo.toml
@@ -16,7 +16,7 @@ gas_calibration = [
     "massa_final_state/test-exports",
     "massa_pos_worker",
     "massa_db_worker",
-    "tempfile"
+    "tempfile",
 ]
 test-exports = [
     "massa_execution_exports/test-exports",
@@ -29,26 +29,26 @@ test-exports = [
     "massa_metrics/test-exports",
     "massa_metrics/test-exports",
     "massa_db_worker",
-    "tempfile"
+    "tempfile",
 ]
 benchmarking = [
     "massa-sc-runtime/gas_calibration",
     "criterion",
     "massa_pos_worker",
     "massa_db_worker",
-    "tempfile"
+    "tempfile",
 ]
 metrics = []
-execution-trace = [
-    "massa_execution_exports/execution-trace",
-]
+execution-trace = ["massa_execution_exports/execution-trace"]
 dump-block = [
     "prost",
-    "massa_execution_exports/dump-block"
+    "massa_execution_exports/dump-block",
+    "db_storage_backend",
 ]
-execution-info = [
-    "execution-trace"
-]
+db_storage_backend = []
+file_storage_backend = []
+
+execution-info = ["execution-trace"]
 
 [dependencies]
 anyhow = { workspace = true }
@@ -90,7 +90,8 @@ massa_wallet = { workspace = true }
 massa-proto-rs = { workspace = true }
 schnellru = { workspace = true }
 prost = { version = "=0.12", optional = true }
-cfg-if = "1.0.0"
+cfg-if = { workspace = true }
+rocksdb = { workspace = true }
 
 [dev-dependencies]
 massa_storage = { workspace = true }
@@ -104,7 +105,7 @@ massa_wallet = { workspace = true, features = ["test-exports"] }
 massa_metrics = { workspace = true, features = ["test-exports"] }
 massa_db_worker = { workspace = true }
 tempfile = { workspace = true }
-massa_test_framework = {workspace = true, "features" = ["test-exports"]}
+massa_test_framework = { workspace = true, "features" = ["test-exports"] }
 tokio = { workspace = true, features = ["sync"] }
 hex-literal = { workspace = true }
 mockall = { workspace = true }
