--- a/massa-execution-exports/Cargo.toml
+++ b/massa-execution-exports/Cargo.toml
@@ -28,6 +28,7 @@ massa_pos_exports = {workspace = true}
 massa_module_cache = {workspace = true}
 massa_versioning = {workspace = true}
 massa-sc-runtime = {workspace = true}
+serde = { version = "1.0.193", features = ["derive"] }
 
 [dev-dependencies]
 mockall = {workspace = true}
